--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "lucide-react": "^0.274.0",
+    "metamorpher": "file:",
     "next": "^14.2.24",
     "next-themes": "^0.2.1",
     "postcss": "^8.5.3",
