Add PWA support and remove donation features
Integrated next-pwa for Progressive Web App support, including manifest and service worker files. Removed donation button and footer components and related code. Updated Dockerfile to use npm instead of yarn. Added PDF conversion support in dropzone. Cleaned up ESLint config and removed unused locales and Tailwind config.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,12 @@
 {
   "extends": [
-    "next/core-web-vitals",
-    "airbnb",
-    "airbnb-typescript"
+    "next/core-web-vitals"
   ],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
   "rules": {
     "semi": 0,
-    "no-extra-semi": ["error", "never"]
+    "no-extra-semi": "error"
   }
 }
