--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "clsx": "^2.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.274.0",
-    "metamorpher": "file:",
     "next": "14.2.35",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
+    "pdfjs-dist": "^5.4.530",
     "postcss": "^8.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
