--- a/package.json
+++ b/package.json
@@ -11,41 +11,49 @@
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.12.6",
     "@ffmpeg/util": "^0.12.1",
-    "@radix-ui/react-dialog": "^1.0.4",
-    "@radix-ui/react-select": "^1.2.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.4",
-    "@types/node": "20.5.9",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "@vercel/analytics": "^1.5.0",
-    "autoprefixer": "10.4.15",
-    "axios": "^1.5.0",
-    "class-variance-authority": "^0.7.0",
+    "@hello-pangea/dnd": "^18.0.1",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@types/node": "^25.0.3",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@vercel/analytics": "^1.6.1",
+    "autoprefixer": "^10.4.23",
+    "axios": "^1.13.2",
+    "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
+    "dompurify": "^3.3.1",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
-    "lucide-react": "^0.274.0",
-    "next": "14.2.35",
+    "jszip": "^3.10.1",
+    "lucide-react": "^0.562.0",
+    "mammoth": "^1.11.0",
+    "markdown-it": "^14.1.0",
+    "next": "^15.5.9",
     "next-pwa": "^5.6.0",
-    "next-themes": "^0.2.1",
+    "next-themes": "^0.4.6",
     "pdfjs-dist": "^5.4.530",
-    "postcss": "^8.5.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-dropzone": "^14.2.3",
+    "postcss": "^8.5.6",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-dropzone": "^14.3.8",
     "react-ga4": "^2.1.0",
-    "react-icons": "^4.10.1",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3",
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2"
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/gtag.js": "^0.0.13",
+    "@types/markdown-it": "^14.1.2",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0"
   }
